--- a/paper/report.bib
+++ b/paper/report.bib
@@ -1,4 +1,68 @@
 
+@article{astropycollaboration2013,
+  title = {Astropy: {{A}} Community {{Python}} Package for Astronomy},
+  shorttitle = {Astropy},
+  author = {Astropy Collaboration and Robitaille, Thomas P. and Tollerud, Erik J. and Greenfield, Perry and Droettboom, Michael and Bray, Erik and Aldcroft, Tom and Davis, Matt and Ginsburg, Adam and {Price-Whelan}, Adrian M. and Kerzendorf, Wolfgang E. and Conley, Alexander and Crighton, Neil and Barbary, Kyle and Muna, Demitri and Ferguson, Henry and Grollier, Fr{\'e}d{\'e}ric and Parikh, Madhura M. and Nair, Prasanth H. and Unther, Hans M. and Deil, Christoph and Woillez, Julien and Conseil, Simon and Kramer, Roban and Turner, James E. H. and Singer, Leo and Fox, Ryan and Weaver, Benjamin A. and Zabalza, Victor and Edwards, Zachary I. and Azalee Bostroem, K. and Burke, D. J. and Casey, Andrew R. and Crawford, Steven M. and Dencheva, Nadia and Ely, Justin and Jenness, Tim and Labrie, Kathleen and Lim, Pey Lian and Pierfederici, Francesco and Pontzen, Andrew and Ptak, Andy and Refsdal, Brian and Servillat, Mathieu and Streicher, Ole},
+  year = {2013},
+  month = oct,
+  journal = {Astronomy and Astrophysics},
+  volume = {558},
+  pages = {A33},
+  issn = {0004-6361},
+  doi = {10.1051/0004-6361/201322068},
+  abstract = {We present the first public version (v0.2) of the open-source and community-developed Python package, Astropy. This package provides core astronomy-related functionality to the community, including support for domain-specific file formats such as flexible image transport system (FITS) files, Virtual Observatory (VO) tables, and common ASCII table formats, unit and physical quantity conversions, physical constants specific to astronomy, celestial coordinate and time transformations, world coordinate system (WCS) support, generalized containers for representing gridded as well as tabular data, and a framework for cosmological transformations and conversions. Significant functionality is under activedevelopment, such as a model fitting framework, VO client and server tools, and aperture and point spread function (PSF) photometry tools. The core development team is actively making additions and enhancements to the current code base, and we encourage anyone interested to participate in the development of future Astropy versions.},
+  langid = {english},
+  file = {/Users/mileslucas/Zotero/storage/FASHAQQ4/Collaboration et al_2013_Astropy.pdf;/Users/mileslucas/Zotero/storage/4YDU95N6/abstract.html}
+}
+
+@article{astropycollaboration2018,
+  title = {The {{Astropy Project}}: {{Building}} an {{Open-science Project}} and {{Status}} of the v2.0 {{Core Package}}},
+  shorttitle = {The {{Astropy Project}}},
+  author = {{Astropy Collaboration} and {Price-Whelan}, A. M. and Sip{\H o}cz, B. M. and G{\"u}nther, H. M. and Lim, P. L. and Crawford, S. M. and Conseil, S. and Shupe, D. L. and Craig, M. W. and Dencheva, N. and Ginsburg, A. and VanderPlas, J. T. and Bradley, L. D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and Aldcroft, T. L. and Cruz, K. L. and Robitaille, T. P. and Tollerud, E. J. and Ardelean, C. and Babej, T. and Bach, Y. P. and Bachetti, M. and Bakanov, A. V. and Bamford, S. P. and Barentsen, G. and Barmby, P. and Baumbach, A. and Berry, K. L. and Biscani, F. and Boquien, M. and Bostroem, K. A. and Bouma, L. G. and Brammer, G. B. and Bray, E. M. and Breytenbach, H. and Buddelmeijer, H. and Burke, D. J. and Calderone, G. and Cano Rodr{\'i}guez, J. L. and Cara, M. and Cardoso, J. V. M. and Cheedella, S. and Copin, Y. and Corrales, L. and Crichton, D. and D'Avella, D. and Deil, C. and Depagne, {\'E}. and Dietrich, J. P. and Donath, A. and Droettboom, M. and Earl, N. and Erben, T. and Fabbro, S. and Ferreira, L. A. and Finethy, T. and Fox, R. T. and Garrison, L. H. and Gibbons, S. L. J. and Goldstein, D. A. and Gommers, R. and Greco, J. P. and Greenfield, P. and Groener, A. M. and Grollier, F. and Hagen, A. and Hirst, P. and Homeier, D. and Horton, A. J. and Hosseinzadeh, G. and Hu, L. and Hunkeler, J. S. and Ivezi{\'c}, {\v Z}. and Jain, A. and Jenness, T. and Kanarek, G. and Kendrew, S. and Kern, N. S. and Kerzendorf, W. E. and Khvalko, A. and King, J. and Kirkby, D. and Kulkarni, A. M. and Kumar, A. and Lee, A. and Lenz, D. and Littlefair, S. P. and Ma, Z. and Macleod, D. M. and Mastropietro, M. and McCully, C. and Montagnac, S. and Morris, B. M. and Mueller, M. and Mumford, S. J. and Muna, D. and Murphy, N. A. and Nelson, S. and Nguyen, G. H. and Ninan, J. P. and N{\"o}the, M. and Ogaz, S. and Oh, S. and Parejko, J. K. and Parley, N. and Pascual, S. and Patil, R. and Patil, A. A. and Plunkett, A. L. and Prochaska, J. X. and Rastogi, T. and Reddy Janga, V. and Sabater, J. and Sakurikar, P. and Seifert, M. and Sherbert, L. E. and {Sherwood-Taylor}, H. and Shih, A. Y. and Sick, J. and Silbiger, M. T. and Singanamalla, S. and Singer, L. P. and Sladen, P. H. and Sooley, K. A. and Sornarajah, S. and Streicher, O. and Teuben, P. and Thomas, S. W. and Tremblay, G. R. and Turner, J. E. H. and Terr{\'o}n, V. and {van Kerkwijk}, M. H. and {de la Vega}, A. and Watkins, L. L. and Weaver, B. A. and Whitmore, J. B. and Woillez, J. and Zabalza, V. and {Astropy Contributors}},
+  year = {2018},
+  month = sep,
+  journal = {The Astronomical Journal},
+  volume = {156},
+  pages = {123},
+  issn = {0004-6256},
+  doi = {10.3847/1538-3881/aabc4f},
+  abstract = {The Astropy Project supports and fosters the development of open-source and openly developed Python packages that provide commonly needed functionality to the astronomical community. A key element of the Astropy Project is the core package astropy, which serves as the foundation for more specialized projects and packages. In this article, we provide an overview of the organization of the Astropy project and summarize key features in the core package, as of the recent major release, version 2.0. We then describe the project infrastructure designed to facilitate and support development for a broader ecosystem of interoperable packages. We conclude with a future outlook of planned new features and directions for the broader Astropy Project. .},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,methods: data analysis,methods: miscellaneous,methods: statistical,reference systems},
+  file = {/Users/mileslucas/Zotero/storage/XB9URMHT/Astropy Collaboration et al_2018_The Astropy Project.pdf;/Users/mileslucas/Zotero/storage/27A75NZ2/abstract.html}
+}
+
+@article{currie2020,
+  title = {On-Sky Performance and Recent Results from the {{Subaru}} Coronagraphic Extreme Adaptive Optics System},
+  author = {Currie, Thayne and Guyon, Olivier and Lozi, Julien and Sahoo, Ananya and Vievard, Sebastien and Deo, Vincent and Chilcote, Jeffrey and Groff, Tyler and Brandt, Timothy D. and Lawson, Kellen and Skaf, Nour and Martinache, Frantz and Kasdin, N. Jeremy},
+  year = {2020},
+  month = dec,
+  volume = {11448},
+  pages = {114487H},
+  address = {{eprint: arXiv:2012.05241}},
+  doi = {10.1117/12.2576349},
+  abstract = {We describe the current on-sky performance of the Subaru Coronagraphic Extreme Adaptive Optics (SCExAO) instrument on the Subaru telescope on Maunakea, Hawaii. SCExAO is continuing to advance its AO performance, delivering H band Strehl ratios in excess of 0.9 for bright stars. We describe new advances with SCExAO's wavefront control that lead to a more stable corrected wavefront and diffraction-limited imaging in the optical, modifications to code that better handle read noise suppression within CHARIS, and tests of the spectrophotometric precision and accuracy within CHARIS. We outline steps in the CHARIS Data Processing Pipeline that output publication-grade data products. Finally, we note recent and upcoming science results, including the discovery of new directly-imaged systems and multiwavelength, deeper characterization of planet-forming disks, and upcoming technical advances that will improve SCExAO's sciencec capabilities.},
+  keywords = {Astrophysics - Earth and Planetary Astrophysics,Astrophysics - Instrumentation and Methods for Astrophysics},
+  annotation = {ADS Bibcode: 2020SPIE11448E..7HC},
+  file = {/Users/mileslucas/Zotero/storage/HTJXUC92/Currie et al. - 2020 - On-sky performance and recent results from the Sub.pdf}
+}
+
+@article{guyon2018,
+  title = {Extreme {{Adaptive Optics}}},
+  author = {Guyon, Olivier},
+  year = {2018},
+  month = sep,
+  journal = {Annu. Rev. Astron. Astrophys.},
+  volume = {56},
+  number = {1},
+  pages = {315--355},
+  publisher = {{Annual Reviews}},
+  issn = {0066-4146},
+  doi = {10.1146/annurev-astro-081817-052000},
+  abstract = {Over the last two decades, several thousand exoplanets have been identified, and their study has become a high scientific priority. Direct imaging of nearby exoplanets and the circumstellar disks in which they form and evolve is challenging due to the high contrast ratio and small angular separation relative to the central star. Exoplanets are typically within 1 arcsec of, and between 4 and 10 orders of magnitude fainter than, the stars they orbit. To meet these challenges, ground-based telescopes must be equipped with extreme adaptive optics (ExAO) systems optimized to acquire high-contrast images of the immediate surrounding of nearby bright stars. Current ExAO systems have the sensitivity to image thermal emission from young massive planets in near-IR, while future systems deployed on Giant Segmented Mirror Telescopes will image starlight reflected by lower-mass rocky planets. Thanks to rapid progress in optical coronagraphy, wavefront control, and data analysis techniques, direct imaging and spectroscopic characterization of habitable exoplanets will be within reach of the next generation of large ground-based telescopes.},
+  keywords = {_tablet},
+  file = {/Users/mileslucas/Zotero/storage/D9QWLBMA/Guyon_2018_Extreme Adaptive Optics.pdf;/Users/mileslucas/Zotero/storage/939DEBV6/annurev-astro-081817-052000.html}
+}
+
 @article{guyonTheoreticalLimitsExtrasolar2006,
   title = {Theoretical {{Limits}} on {{Extrasolar Terrestrial Planet Detection}} with {{Coronagraphs}}},
   author = {Guyon, O. and Pluzhnik, E. A. and Kuchner, M. J. and Collins, B. and Ridgway, S. T.},
@@ -15,6 +79,25 @@
   file = {/Users/mileslucas/Zotero/storage/I53I6KWZ/Guyon et al_2006_Theoretical Limits on Extrasolar Terrestrial Planet Detection with Coronagraphs.pdf}
 }
 
+@article{harris2020,
+  title = {Array Programming with {{NumPy}}},
+  author = {Harris, Charles R. and Millman, K. Jarrod and {van der Walt}, St{\'e}fan J. and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J. and Kern, Robert and Picus, Matti and Hoyer, Stephan and {van Kerkwijk}, Marten H. and Brett, Matthew and Haldane, Allan and {del R{\'i}o}, Jaime Fern{\'a}ndez and Wiebe, Mark and Peterson, Pearu and {G{\'e}rard-Marchant}, Pierre and Sheppard, Kevin and Reddy, Tyler and Weckesser, Warren and Abbasi, Hameer and Gohlke, Christoph and Oliphant, Travis E.},
+  year = {2020},
+  month = sep,
+  journal = {Nature},
+  volume = {585},
+  number = {7825},
+  pages = {357--362},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/s41586-020-2649-2},
+  abstract = {Array programming provides a powerful, compact and expressive syntax for accessing, manipulating and operating on data in vectors, matrices and higher-dimensional arrays. NumPy is the primary array programming library for the Python language. It has an essential role in research analysis pipelines in fields as diverse as physics, chemistry, astronomy, geoscience, biology, psychology, materials science, engineering, finance and economics. For example, in astronomy, NumPy was an important part of the software stack used in the discovery of gravitational waves1 and in the first imaging of a black hole2. Here we review how a few fundamental array concepts lead to a simple and powerful programming paradigm for organizing, exploring and analysing scientific data. NumPy is the foundation upon which the scientific Python ecosystem is constructed. It is so pervasive that several projects, targeting audiences with specialized needs, have developed their own NumPy-like interfaces and array objects. Owing to its central position in the ecosystem, NumPy increasingly acts as an interoperability layer between such array computation libraries and, together with its application programming interface (API), provides a flexible framework to support the next decade of scientific and industrial analysis.},
+  copyright = {2020 The Author(s)},
+  langid = {english},
+  annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Reviews Subject\_term: Computational neuroscience;Computational science;Computer science;Software;Solar physics Subject\_term\_id: computational-neuroscience;computational-science;computer-science;software;solar-physics},
+  file = {/Users/mileslucas/Zotero/storage/5IKLUNIE/Harris et al_2020_Array programming with NumPy.pdf;/Users/mileslucas/Zotero/storage/N3B949IJ/s41586-020-2649-2.html}
+}
+
 @article{huby2017,
   title = {On-Sky Performance of the {{QACITS}} Pointing Control Technique with the {{Keck}}/{{NIRC2}} Vortex Coronagraph},
   author = {Huby, E. and Bottom, M. and Femenia, B. and Ngo, H. and Mawet, D. and Serabyn, E. and Absil, O.},
@@ -28,6 +111,110 @@
   abstract = {Context. A vortex coronagraph is now available for high contrast observations with the Keck/NIRC2 instrument at L band. The vortex coronagraph uses a vortex phase mask in a focal plane and a Lyot stop in a downstream pupil plane to provide high contrast at small angular separations from the observed host star. {$<$}BR /{$>$} Aims: Reaching the optimal performance of the coronagraph requires fine control of the wavefront incident on the phase mask. In particular, centering errors can lead to significant stellar light leakage that degrades the contrast performance and prevents the observation of faint planetary companions around the observed stars. It is thus critical to correct for the possible slow drift of the star image from the phase mask center, generally due to mechanical flexures induced by temperature and/or gravity field variation, or to misalignment between the optics that rotate in pupil tracking mode. {$<$}BR /{$>$} Methods: A control loop based on the QACITS algorithm for the vortex coronagraph has been developed and deployed for the Keck/NIRC2 instrument. This algorithm executes the entire observing sequence, including the calibration steps, initial centering of the star on the vortex center, and stabilisation during the acquisition of science frames. {$<$}BR /{$>$} Results: On-sky data show that the QACITS control loop stabilizes the position of the star image down to 2.4 mas rms at a frequency of about 0.02 Hz. However, the accuracy of the estimator is probably limited by a systematic error due to a misalignment of the Lyot stop with respect to the entrance pupil, estimated to be on the order of 4.5 mas. A method to reduce the amplitude of this bias down to 1 mas is proposed. {$<$}BR /{$>$} Conclusions: The QACITS control loop has been successfully implemented and provides a robust method to center and stabilize the star image on the vortex mask. In addition, QACITS ensures a repeatable pointing quality and significantly improves the observing efficiency compared to manual operations. It is now routinely used for vortex coronagraph observations at Keck/NIRC2, providing contrast and angular resolution capabilities suited for exoplanet and disk imaging.},
   langid = {english},
   file = {/Users/mileslucas/Zotero/storage/MDSRX636/Huby et al. - 2017 - On-sky performance of the QACITS pointing control .pdf;/Users/mileslucas/Zotero/storage/SWA42ADE/abstract.html}
+}
+
+@article{jovanovic2015a,
+  title = {The {{Subaru Coronagraphic Extreme Adaptive Optics System}}: {{Enabling High-Contrast Imaging}} on {{Solar-System Scales}}},
+  shorttitle = {The {{Subaru Coronagraphic Extreme Adaptive Optics System}}},
+  author = {Jovanovic, N. and Martinache, F. and Guyon, O. and Clergeon, C. and Singh, G. and Kudo, T. and Garrel, V. and Newman, K. and Doughty, D. and Lozi, J. and Males, J. and Minowa, Y. and Hayano, Y. and Takato, N. and Morino, J. and Kuhn, J. and Serabyn, E. and Norris, B. and Tuthill, P. and Schworer, G. and Stewart, P. and Close, L. and Huby, E. and Perrin, G. and Lacour, S. and Gauchet, L. and Vievard, S. and Murakami, N. and Oshiyama, F. and Baba, N. and Matsuo, T. and Nishikawa, J. and Tamura, M. and Lai, O. and Marchis, F. and Duchene, G. and Kotani, T. and Woillez, J.},
+  year = {2015},
+  month = sep,
+  journal = {Publications of the Astronomical Society of the Pacific},
+  volume = {127},
+  pages = {890},
+  issn = {0004-6280},
+  doi = {10.1086/682989},
+  abstract = {The Subaru Coronagraphic Extreme Adaptive Optics (SCExAO) instrument is  a multipurpose high-contrast imaging platform designed for the discovery and detailed characterization of exoplanetary systems and serves as a testbed for high-contrast imaging technologies for ELTs. It is a multi-band instrument which makes use of light from 600 to 2500nm allowing for coronagraphic direct exoplanet imaging of the inner 3 lambda/D from the stellar host. Wavefront sensing and control are key to the operation of SCExAO. A partial correction of low-order modes is provided by Subaru's facility adaptive optics system with the final correction, including high-order modes, implemented downstream by a combination of a visible pyramid wavefront sensor and a 2000-element deformable mirror. The well corrected NIR (y-K bands) wavefronts can then be injected into any of the available coronagraphs, including but not limited to the phase induced amplitude apodization and the vector vortex coronagraphs, both of which offer an inner working angle as low as 1 lambda/D. Non-common path, low-order aberrations are sensed with a coronagraphic low-order wavefront sensor in the infrared (IR). Low noise, high frame rate, NIR detectors allow for active speckle nulling and coherent differential imaging, while the HAWAII 2RG detector in the HiCIAO imager and/or the CHARIS integral field spectrograph (from mid 2016) can take deeper exposures and/or perform angular, spectral and polarimetric differential imaging. Science in the visible is provided by two interferometric modules: VAMPIRES and FIRST, which enable sub-diffraction limited imaging in the visible region with polarimetric and spectroscopic capabilities respectively. We describe the instrument in detail and present preliminary results both on-sky and in the laboratory.},
+  file = {/Users/mileslucas/Zotero/storage/UDZALYBF/Jovanovic et al_2015_The Subaru Coronagraphic Extreme Adaptive Optics System.pdf}
+}
+
+@article{lucas2020,
+  title = {{{ADI}}.Jl: {{A Julia Package}} for {{High-Contrast Imaging}}},
+  shorttitle = {{{ADI}}.Jl},
+  author = {Lucas, Miles and Bottom, Michael},
+  year = {2020},
+  month = dec,
+  journal = {Journal of Open Source Software},
+  volume = {5},
+  number = {56},
+  pages = {2843},
+  issn = {2475-9066},
+  doi = {10.21105/joss.02843},
+  abstract = {Lucas et al., (2020). ADI.jl: A Julia Package for High-Contrast Imaging. Journal of Open Source Software, 5(56), 2843, https://doi.org/10.21105/joss.02843},
+  langid = {english},
+  file = {/Users/mileslucas/Zotero/storage/MD997D3H/Lucas_Bottom_2020_ADI.pdf;/Users/mileslucas/Zotero/storage/XRYLGJM2/joss.html}
+}
+
+@article{macintosh2014,
+  title = {First Light of the {{Gemini Planet Imager}}},
+  author = {Macintosh, Bruce and Graham, James R. and Ingraham, Patrick and Konopacky, Quinn and Marois, Christian and Perrin, Marshall and Poyneer, Lisa and Bauman, Brian and Barman, Travis and Burrows, Adam S. and Cardwell, Andrew and Chilcote, Jeffrey and Rosa, Robert J. De and Dillon, Daren and Doyon, Rene and Dunn, Jennifer and Erikson, Darren and Fitzgerald, Michael P. and Gavel, Donald and Goodsell, Stephen and Hartung, Markus and Hibon, Pascale and Kalas, Paul and Larkin, James and Maire, Jerome and Marchis, Franck and Marley, Mark S. and McBride, James and {Millar-Blanchaer}, Max and Morzinski, Katie and Norton, Andrew and Oppenheimer, B. R. and Palmer, David and Patience, Jennifer and Pueyo, Laurent and Rantakyro, Fredrik and Sadakuni, Naru and Saddlemyer, Leslie and Savransky, Dmitry and Serio, Andrew and Soummer, Remi and Sivaramakrishnan, Anand and Song, Inseok and Thomas, Sandrine and Wallace, J. Kent and Wiktorowicz, Sloane and Wolff, Schuyler},
+  year = {2014},
+  month = sep,
+  journal = {PNAS},
+  volume = {111},
+  number = {35},
+  pages = {12661--12666},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1304215111},
+  abstract = {The Gemini Planet Imager is a dedicated facility for directly imaging and spectroscopically characterizing extrasolar planets. It combines a very high-order adaptive optics system, a diffraction-suppressing coronagraph, and an integral field spectrograph with low spectral resolution but high spatial resolution. Every aspect of the Gemini Planet Imager has been tuned for maximum sensitivity to faint planets near bright stars. During first-light observations, we achieved an estimated H band Strehl ratio of 0.89 and a 5-{$\sigma$} contrast of 106 at 0.75 arcseconds and 105 at 0.35 arcseconds. Observations of Beta Pictoris clearly detect the planet, Beta Pictoris b, in a single 60-s exposure with minimal postprocessing. Beta Pictoris b is observed at a separation of 434 {$\pm$} 6 milliarcseconds (mas) and position angle 211.8 {$\pm$} 0.5\textdegree. Fitting the Keplerian orbit of Beta Pic b using the new position together with previous astrometry gives a factor of 3 improvement in most parameters over previous solutions. The planet orbits at a semimajor axis of 9.0+0.8-0.4AU9.0-0.4+0.8 AU{$<$}mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML"{$><$}mml:mrow{$><$}mml:msubsup{$><$}mml:mrow{$><$}mml:mn{$>$}9.0{$<$}/mml:mn{$><$}/mml:mrow{$><$}mml:mrow{$><$}mml:mo{$>-<$}/mml:mo{$><$}mml:mn{$>$}0.4{$<$}/mml:mn{$><$}/mml:mrow{$><$}mml:mrow{$><$}mml:mo{$>$}+{$<$}/mml:mo{$><$}mml:mn{$>$}0.8{$<$}/mml:mn{$><$}/mml:mrow{$><$}/mml:msubsup{$><$}mml:mrow{$><$}mml:mtext{$><$}/mml:mtext{$><$}mml:mo{$>$} {$<$}/mml:mo{$><$}/mml:mrow{$><$}mml:mi mathvariant="bold"{$>$}AU{$<$}/mml:mi{$><$}/mml:mrow{$><$}/mml:math{$>$} near the 3:2 resonance with the previously known 6-AU asteroidal belt and is aligned with the inner warped disk. The observations give a 4\% probability of a transit of the planet in late 2017.},
+  chapter = {Physical Sciences},
+  langid = {english},
+  pmid = {24821792},
+  keywords = {debris disks,extreme adaptive optics,high-contrast imaging},
+  file = {/Users/mileslucas/Zotero/storage/CNXH6GJS/Macintosh et al_2014_First light of the Gemini Planet Imager.pdf;/Users/mileslucas/Zotero/storage/R5BAAZ72/12661.html}
+}
+
+@article{mawet2014,
+  title = {Fundamental Limitations of High Contrast Imaging Set by Small Sample Statistics},
+  author = {Mawet, Dimitri and Milli, Julien and Wahhaj, Zahed and Pelat, Didier and Absil, Olivier and Delacroix, Christian and Boccaletti, Anthony and Kasper, Markus and Kenworthy, Matthew and Marois, Christian and Mennesson, Bertrand and Pueyo, Laurent},
+  year = {2014},
+  month = aug,
+  journal = {ApJ},
+  volume = {792},
+  number = {2},
+  eprint = {1407.2247},
+  eprinttype = {arxiv},
+  pages = {97},
+  issn = {1538-4357},
+  doi = {10.1088/0004-637X/792/2/97},
+  abstract = {In this paper, we review the impact of small sample statistics on detection thresholds and corresponding confidence levels (CLs) in high contrast imaging at small angles. When looking close to the star, the number of resolution elements decreases rapidly towards small angles. This reduction of the number of degrees of freedom dramatically affects CLs and false alarm probabilities. Naively using the same ideal hypothesis and methods as for larger separations, which are well understood and commonly assume Gaussian noise, can yield up to one order of magnitude error in contrast estimations at fixed CL. The statistical penalty exponentially increases towards very small inner working angles. Even at 5-10 resolution elements from the star, false alarm probabilities can be significantly higher than expected. Here we present a rigorous statistical analysis which ensures robustness of the CL, but also imposes a substantial limitation on corresponding achievable detection limits (thus contrast) at small angles. This unavoidable fundamental statistical effect has a significant impact on current coronagraphic and future high contrast imagers. Finally, the paper concludes with practical recommendations to account for small number statistics when computing the sensitivity to companions at small angles and when exploiting the results of direct imaging planet surveys.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+  file = {/Users/mileslucas/Zotero/storage/BJG97C58/Mawet et al. - 2014 - Fundamental limitations of high contrast imaging s.pdf}
+}
+
+@article{norris2015,
+  title = {The {{VAMPIRES}} Instrument: Imaging the Innermost Regions of Protoplanetary Discs with Polarimetric Interferometry},
+  shorttitle = {The {{VAMPIRES}} Instrument},
+  author = {Norris, Barnaby and Schworer, Guillaume and Tuthill, Peter and Jovanovic, Nemanja and Guyon, Olivier and Stewart, Paul and Martinache, Frantz},
+  year = {2015},
+  month = mar,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {447},
+  pages = {2894--2906},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stu2529},
+  abstract = {Direct imaging of protoplanetary discs promises to provide key insight into the complex sequence of processes by which planets are formed. However, imaging the innermost region of such discs (a zone critical to planet formation) is challenging for traditional observational techniques (such as near-IR imaging and coronagraphy) due to the relatively long wavelengths involved and the area occulted by the coronagraphic mask. Here, we introduce a new instrument - Visible Aperture-Masking Polarimetric Interferometer for Resolving Exoplanetary Signatures (VAMPIRES) - which combines non-redundant aperture-masking interferometry with differential polarimetry to directly image this previously inaccessible innermost region. By using the polarization of light scattered by dust in the disc to provide precise differential calibration of interferometric visibilities and closure phases, VAMPIRES allows direct imaging at and beyond the telescope diffraction limit. Integrated into the SCExAO (Subaru Coronagraphic Extreme Adaptive Optics) system at the Subaru telescope, VAMPIRES operates at visible wavelengths (where polarization is high) while allowing simultaneous infrared observations conducted by HICIAO. Here, we describe the instrumental design and unique observing technique and present the results of the first on-sky commissioning observations, validating the excellent visibility and closure-phase precision which are then used to project expected science performance metrics.},
+  keywords = {instrumentation: high angular resolution,instrumentation: interferometers,instrumentation: polarimeters,planet-disc interactions,protoplanetary discs,techniques: interferometric},
+  annotation = {ADS Bibcode: 2015MNRAS.447.2894N},
+  file = {/Users/mileslucas/Zotero/storage/G25EPGQB/Norris et al. - 2015 - The VAMPIRES instrument imaging the innermost reg.pdf}
+}
+
+@inproceedings{petit2014,
+  title = {{{SPHERE eXtreme AO}} Control Scheme: Final Performance Assessment and on Sky Validation of the First Auto-Tuned {{LQG}} Based Operational System},
+  shorttitle = {{{SPHERE eXtreme AO}} Control Scheme},
+  booktitle = {Adaptive {{Optics Systems IV}}},
+  author = {Petit, C. and Sauvage, J.-F. and Fusco, T. and Sevin, A. and Suarez, M. and Costille, A. and Vigan, A. and Soenke, C. and Perret, D. and Rochat, S. and Barrufolo, A. and Salasnich, B. and Beuzit, J.-L. and Dohlen, K. and Mouillet, D. and Puget, P. and Wildi, F. and Kasper, M. and Conan, J.-M. and Kulcs{\'a}r, C. and Raynaud, H.-F.},
+  year = {2014},
+  month = aug,
+  volume = {9148},
+  pages = {91480O},
+  publisher = {{International Society for Optics and Photonics}},
+  doi = {10.1117/12.2052847},
+  abstract = {The SPHERE (Spectro-Polarimetry High-contrast Exoplanet Research) instrument is an ESO project aiming at the direct detection of extra-solar planets. SPHERE has been successfully integrated and tested in Europe end 2013 and has been re-integrated at Paranal in Chile early 2014 for a first light at the beginning of May. The heart of the SPHERE instrument is its eXtreme Adaptive Optics (XAO) SAXO (SPHERE AO for eXoplanet Observation) subsystem that provides extremely high correction of turbulence and very accurate stabilization of images for coronagraphic purpose. However, SAXO, as well as the overall instrument, must also provide constant operability overnights, ensuring robustness and autonomy. An original control scheme has been developed to satisfy this challenging dichotomy. It includes in particular both an Optimized Modal Gain Integrator (OMGI) to control the Deformable Mirror (DM) and a Linear Quadratic Gaussian (LQG) control law to manage the tip-tilt (TT) mirror. LQG allows optimal estimation and prediction of turbulent angle of arrival but also of possible vibrations. A specific and unprecedented control scheme has been developed to continuously adapt and optimize LQG control ensuring a constant match to turbulence and vibrations characteristics. SPHERE is thus the first operational system implementing LQG, with automatic adjustment of its models. SAXO has demonstrated performance beyond expectations during tests in Europe, in spite of internal limitations. Very first results have been obtained on sky last May. We thus come back to SAXO control scheme, focusing in particular on the LQG based TT control and the various upgrades that have been made to enhance further the performance ensuring constant operability and robustness. We finally propose performance assessment based on in lab performance and first on sky results and discuss further possible improvements.},
+  file = {/Users/mileslucas/Zotero/storage/95955UDZ/Petit et al_2014_SPHERE eXtreme AO control scheme.pdf;/Users/mileslucas/Zotero/storage/XT9R6ZYF/12.2052847.html}
 }
 
 @article{por2018,
@@ -59,6 +246,22 @@
   langid = {english},
   keywords = {Coronagraphy,Coronographie,Détection directe,Direct detection,Exoplanet,Exoplanètes},
   file = {/Users/mileslucas/Zotero/storage/IMXH7CUB/Rouan et al. - 2007 - The Four Quadrant Phase Mask Coronagraph and its a.pdf;/Users/mileslucas/Zotero/storage/T4Y5MDGH/S1631070507000850.html}
+}
+
+@article{sahoo2020,
+  title = {Precision {{Photometric}} and {{Astrometric Calibration Using Alternating Satellite Speckles}}},
+  author = {Sahoo, Ananya and Guyon, Olivier and Lozi, Julien and Chilcote, Jeffery and Jovanovic, Nemanja and Brandt, Timothy and Groff, Tyler and Martinache, Frantz},
+  year = {2020},
+  month = jun,
+  journal = {The Astronomical Journal},
+  volume = {159},
+  pages = {250},
+  issn = {0004-6256},
+  doi = {10.3847/1538-3881/ab88cd},
+  abstract = {Photometric and astrometric calibration of high-contrast images is essential for the characterization of companions at small angular separation from their stellar host. The main challenge to performing accurate relative photometry and astrometry of high-contrast companions with respect to the host star is that the central starlight cannot be directly used as a reference, as it is either blocked by a coronagraphic mask or saturating the detector. Our approach is to add fiducial incoherent faint copies of the host star in the image plane and alternate the pattern of these copies between exposures. Subtracting two frames with different calibration patterns removes measurement bias due to static and slowly varying incoherent speckle halo components, while ensuring that calibration references are inserted on each frame. Each calibration pattern is achieved by high-speed modulation of a pupil-plane deformable mirror to ensure incoherence. We implemented the technique on-sky on the Subaru Coronagraphic Extreme Adaptive Optics instrument with speckles which were of the order of 103 times fainter than the central host. The achieved relative photometric and astrometric measurement precisions for 10 s exposure were respectively 5\% and 20 milliarcsecond. We also demonstrate, over a 540 s measurement span, that residual photometric and astrometric errors are uncorrelated in time, indicating that residual noise averages as the inverse square root of the number of exposures in longer time-series data sets.},
+  keywords = {1234,1684,313,387,68,799,80,Artificial satellites,Astrometry,Astronomical instrumentation,Astronomical techniques,Coronagraphic imaging,Direct imaging,Photometry},
+  annotation = {ADS Bibcode: 2020AJ....159..250S},
+  file = {/Users/mileslucas/Zotero/storage/H5BB2J9B/Sahoo et al_2020_Precision Photometric and Astrometric Calibration Using Alternating Satellite.pdf}
 }
 
 
